<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="startingTitle">My Geo Quiz</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="miss_question">You have miss this question</string>
    <string name="amount_of_correct_answers">Correct: </string>
    <string name="amount_of_incorrect_answers">Incorrect: </string>
    <string name="final_mark">Final mark: </string>
    <string name="percent">%</string>
    <string name="reset_button">Reset</string>
    <string name="answered_question">You have answered this question</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="cheat_token_left">Token Left: </string>
    <string name="high_score">High Score: </string>
    <string name="score">Score: </string>
    <string name="no_answered_question">Answered Question: </string>
    <string name="back_pressed">Press back again to quit geo quiz</string>
    <string name="no_miss_question">Number of missed question: </string>
    <string name="summary">Result Summary</string>
    <string name="total_score">Total Score</string>
    <string name="total_question_answered">Total Question Answered</string>
    <string name="total_cheat_attempts">Total Cheat Attempts</string>
    <string name="total_miss_question">Total Missed Question</string>
    <string name="total_used_time_toast">Total used time: </string>
    <string name="total_used_time">Total Used Time</string>
</resources>
