<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/text_view_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/text_view_question_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_answered_question"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/count_down_timer"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="00:30"
            android:drawableLeft="@drawable/ic_timer_black_24dp"
            android:textSize="45dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="24dp"
        android:textColor="@color/colorText"
        android:textSize="18dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        tools:text="Question" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button" />
    </LinearLayout>

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cheat_button" />

    <TextView
        android:id="@+id/cheat_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:text="Token Left" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <!--<Button
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/arrow_left"
            android:padding="4dp"
            android:text="@string/previous_button" />-->

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/previous_button"
            android:src="@drawable/arrow_left"></ImageButton>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/arrow_right"
            android:padding="4dp"
            android:text="@string/next_button" />

    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:padding="4dp"
        android:text="@string/reset_button"
        android:visibility="invisible" />

</LinearLayout>